feat: add chat param and webrtc response param to session endpoint
